chau-update-code-question-fe

--- a/project/FE/src/app/question/question-bank/question-bank-list/question-bank-list.component.html
+++ b/project/FE/src/app/question/question-bank/question-bank-list/question-bank-list.component.html
@@ -36,10 +36,10 @@
             <td class="text-left">{{questionList.question}}</td>
             <td>
               <div class="border">
-                <div class="navbar  bg-answer-1">{{questionList.answer1}}</div>
-                <div class="navbar  bg-answer-2">{{questionList.answer2}}</div>
-                <div class="navbar  bg-answer-3">{{questionList.answer3}}</div>
-                <div class="navbar  bg-answer-4">{{questionList.answer4}}</div>
+                <div class="navbar  bg-answer-1">{{questionList.answerA}}</div>
+                <div class="navbar  bg-answer-2">{{questionList.answerB}}</div>
+                <div class="navbar  bg-answer-3">{{questionList.answerC}}</div>
+                <div class="navbar  bg-answer-4">{{questionList.answerD}}</div>
               </div>
             </td>
             <td class="text-left">{{questionList.rightAnswer}}</td>
