--- a/project/FE/src/app/question/question-list-in-the-exam/question-list-in-the-exam.component.html
+++ b/project/FE/src/app/question/question-list-in-the-exam/question-list-in-the-exam.component.html
@@ -15,8 +15,8 @@
           </tr>
           </thead>
           <tbody class="bg-table">
-          <tr *ngFor="let questionList of question">
-            <th style="font-weight: normal">1</th>
+          <tr *ngFor="let questionList of questionInExam">
+            <th style="font-weight: normal"></th>
             <td>{{questionList.questionId}}</td>
             <td class="text-left">{{questionList.question}}</td>
             <td class="text-left">{{questionList.rightAnswer}}</td>
