--- a/project/FE/src/app/question/update-question/update-question.component.html
+++ b/project/FE/src/app/question/update-question/update-question.component.html
@@ -43,7 +43,7 @@
           Test
           <i class="pr-5" aria-hidden="true"></i>
           <div class="input-group mb-3  float-right" style="width: 300px">
-            <input formControlName="testCodeList"  class=" form-control" type="text"  [(ngModel)]="listTestCode" [value]="listTestCode" aria-label="Recipient's username" aria-describedby="button-addon2">
+            <input formControlName="testCodeList" readonly class=" form-control" type="text"  [(ngModel)]="listTestCode" [value]="listTestCode" aria-label="Recipient's username" aria-describedby="button-addon2">
             <div class="input-group-append">
               <button class="btn btn-outline-secondary" (click)="reset()" type="button" id="button-addon2">Retype</button>
             </div>
