--- a/project/FE/src/app/exam/get-exam/get-exam.component.css
+++ b/project/FE/src/app/exam/get-exam/get-exam.component.css
@@ -62,12 +62,16 @@ ul {
   clear:left;
 }
 
-.fa-times{
+.allCheckQ{
   visibility: hidden;
 }
 
+.fa-times{
+  visibility: visible;
+}
+
 .fa-check{
-  visibility: hidden;
+  visibility: visible;
 }
 
 
