--- a/project/FE/src/app/exam/get-exam/get-exam.component.html
+++ b/project/FE/src/app/exam/get-exam/get-exam.component.html
@@ -15,7 +15,7 @@
           <!--question-->
           <b><span>Q {{i + 1}}: </span></b><b><span>{{question.question}}</span></b>
           <!--correct answer-->
-          <input id="text{{i+1}}" [style.visibility]="'hidden'"  value="{{question.rightAnswer}}"/><br/>
+          <input id="text{{i+1}}" class="rightAnswer"  value="{{question.rightAnswer}}"/><br/>
           <!--answer-->
           <i id="Q{{i+1}}A" ng-class="{{listAnswer[i]}}=={{question.answerA}}?'fa-check':'fa-times'" class="fa allCheckQ"></i>
           <input id="Cau{{question.questionId}}A" [name]="question.questionId" type="radio"
