phuong-create time

--- a/project/FE/src/app/test/get-test/get-test.component.html
+++ b/project/FE/src/app/test/get-test/get-test.component.html
@@ -1,6 +1,6 @@
 <div>
   <div>
-    <label>Remaining time <span style="color: red;"><b><span class="timer" id="time"></span></b></span></label>
+    <label>Remaining time <span [style.color]="'red'"><b>{{display}}</b></span></label>
   </div>
   <form name="myform">
     <table>
