--- a/project/FE/src/app/exam/get-exam/get-exam.component.html
+++ b/project/FE/src/app/exam/get-exam/get-exam.component.html
@@ -4,12 +4,13 @@
       <p>Exam number {{exam.examId}}</p>
     </div>
     <div>
-      <label id="result"></label><br/>
+      <label id="result">Your score is <b [style.color]="'blue'"> {{exam.mark}}/10 </b> question."
+      </label><br/>
     </div>
   </div>
   <table>
     <tbody>
-    <ng-container formArrayName="answer" *ngFor="let question of listQuestion ;let i=index;">
+    <ng-container *ngFor="let question of listQuestion ;let i=index;">
       <ul class="question">
         <li>
           <!--question-->
