--- a/project/FE/src/app/user/list-user/list-user.component.html
+++ b/project/FE/src/app/user/list-user/list-user.component.html
@@ -84,23 +84,14 @@
             </tr>
             </tbody>
           </table>
-          <nav aria-label="Page navigation example">
-            <ul class="pagination justify-content-end">
-              <li class="page-item">
-                <a class="page-link" href="#" tabindex="-1">First</a>
-              </li>
-              <li class="page-item disabled">
-                <a class="page-link" href="#" tabindex="-1">Previous</a>
-              </li>
-              <li class="page-item">
-                <a class="page-link" href="#">Next</a>
-              </li>
-              <li class="page-item">
-                <a class="page-link" href="#" tabindex="-1">Last</a>
-              </li>
-            </ul>
-          </nav>
-          <div  class="col-md-12 d-flex justify-content-md-end mb-3">
+          <mat-paginator [showFirstLastButtons]="true"
+                         [length]="totalSize"
+                         [pageSize]="pageSize"
+                         [pageSizeOptions]="[5, 10, 20]"
+                         (page)="pageEvent = handlePage($event)"
+                         [pageIndex]="currentPage">
+          </mat-paginator>
+          <div class="col-md-12 d-flex justify-content-md-end mb-3">
             <button id="closeButton" class="btn btn-outline-secondary align-self-end">
               Close
             </button>
